--- a/src/style.css
+++ b/src/style.css
@@ -35,6 +35,7 @@ span.temperature {
 }
 
   h4 {
+    
     color: #2d4059;
   }
   div.row {
@@ -58,4 +59,8 @@ h5.currentTime {
 a {
     font-size: 15px;
     position: inline-block;
+}
+
+h4.shareCode {
+  font-size: 15px;
 }
